Fixed min height (no white space under footer)

--- a/client/src/components/whoWeAre/whoWeAre.css
+++ b/client/src/components/whoWeAre/whoWeAre.css
@@ -31,6 +31,8 @@
   .whoWeAreText h1 {
     font-weight: bold;
     font-size: 96px;
+    color: #f1eee9 ;
+
   }
 
   @media screen and (max-width: 375px) {
