--- a/client/src/pages/give/give.css
+++ b/client/src/pages/give/give.css
@@ -1,3 +1,7 @@
+.givePage{
+min-height: 100vh;
+}
+
 .giveButton {
     /* background: teal; */
     background-color: #333333;
@@ -27,4 +31,14 @@
     color: #333333;
     text-align: center;
     
+  }
+
+  .verseContainer{
+   background-color:#afc4c0 ;
+    border-radius: 1.5rem;
+  }
+
+  .verseFont{
+    /* font-size: 100px; */
+    font-weight: semibold;
   }
